--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ dash = "^2.6.0"
 lmfit = "^1.0.3"
 # docs dependencies (for readthedocs, https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-664002569)
 Sphinx = { version = "^4.3.2", optional = true }
-sphinx-rtd-theme = { version = "^1.0.0", optional = true }
+furo = { version = "^2022.9.29", optional = true }
 sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }
 recommonmark = { version = "^0.7.1", optional = true }
 sphinx_markdown_tables = { version = "^0.0.17", optional = true }
@@ -37,13 +37,13 @@ pytest = "^7.1.2"
 pytest-cov = "^3.0.0"
 poethepoet = "^0.16.0"
 Sphinx = "^4.3.2"
-sphinx-rtd-theme = "^1.0.0"
+furo = "^2022.9.29"
 sphinxcontrib-bibtex = "^2.4.1"
 recommonmark = "^0.7.1"
 sphinx_markdown_tables = "^0.0.17"
 
 [tool.poetry.extras]
-docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex", "recommonmark", "sphinx_markdown_tables"]
+docs = ["sphinx", "furo", "sphinxcontrib-bibtex", "recommonmark", "sphinx_markdown_tables"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
