--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -1,6 +1,5 @@
 name: Deploy docs
 
-
 on:
   workflow_dispatch:
   push:
@@ -9,6 +8,6 @@ on:
 jobs:
 
   deploy-docs:
-    uses: qibogang/workflows/.github/workflows/deploy-sphinx-docs-to-ghpages.yml@cache_pip
+    uses: qibogang/workflows/.github/workflows/deploy-sphinx-docs-to-ghpages.yml@documentation
     with:
       python-version: 3.9
