--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -11,4 +11,4 @@ jobs:
     uses: qibogang/workflows/.github/workflows/deploy-sphinx-docs-to-ghpages.yml@documentation
     with:
       python-version: 3.9
-      package-manager: poetry
+      package-manager: "poetry"
