--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -31,7 +31,7 @@ jobs:
 
   deploy-docs:
     needs: [evaluate-label]
-    uses: qibogang/workflows/.github/workflows/deploy-ghpages-latest-stable.yml@versions
+    uses: qibogang/workflows/.github/workflows/deploy-ghpages-latest-stable.yml@build
     with:
       python-version: 3.9
       package-manager: "poetry"
