--- a/.github/workflows/deploy_doc.yml
+++ b/.github/workflows/deploy_doc.yml
@@ -4,7 +4,7 @@ name: Deploy docs
 on: 
   workflow_dispatch:
   push:
-      branches: [main,versions] # TODO: remove branch versions 
+      branches: [main] 
       tags:
         - '*'
 
@@ -14,15 +14,15 @@ jobs:
   evaluate-label:
     runs-on: ubuntu-latest
     outputs:
-      label: ${{ steps.label_step.outputs.version}}
+      label: ${{ steps.label_step.outputs.main}}
     steps:
       - name: checks for the label 
         id: label_step 
         run: |
-          if [[ "${{ github.ref  }}" == "refs/heads/versions" ]]; then # TODO: modify the branch after merging
+          if [[ "${{ github.ref  }}" == "refs/heads/main" ]]; then # TODO: modify the branch after merging
                 echo "version=latest" >> $GITHUB_OUTPUT
           fi
-          if [[ "${{ github.ref_type }}" == "branch" ]] && [[ "${{ github.ref  }}" != "refs/heads/versions" ]]; then # TODO: modify the branch after merging
+          if [[ "${{ github.ref_type }}" == "branch" ]] && [[ "${{ github.ref  }}" != "refs/heads/main" ]]; then # TODO: modify the branch after merging
                 exit 1
           fi
           if [[ "${{ github.ref_type }}" == "tag" ]]; then 
@@ -31,7 +31,7 @@ jobs:
 
   deploy-docs:
     needs: [evaluate-label]
-    uses: qibogang/workflows/.github/workflows/deploy-ghpages-latest-stable.yml@build
+    uses: qibogang/workflows/.github/workflows/deploy-ghpages-latest-stable.yml@main
     with:
       python-version: 3.9
       package-manager: "poetry"
